--- a/wiki/DateFormat.wiki
+++ b/wiki/DateFormat.wiki
@@ -7,14 +7,22 @@ Add your content here.
 
 = Table =
 
-|| Expression || Output ||
-|| d || the day as number without a leading zero (1 to 31) ||
-|| dd || the day as number with a leading zero (01 to 31) ||
-|| ddd || the abbreviated localized day name (e.g. 'Mon' to 'Sun'). Uses QDate::shortDayName(). ||
-|| dddd || the long localized day name (e.g. 'Monday' to 'Sunday'). Uses QDate::longDayName(). ||
-|| M || the month as number without a leading zero (1 to 12) ||
-|| MM || the month as number with a leading zero (01 to 12) ||
-|| MMM || the abbreviated localized month name (e.g. 'Jan' to 'Dec'). Uses QDate::shortMonthName(). ||
-|| MMMM || the long localized month name (e.g. 'January' to 'December'). Uses || QDate::longMonthName(). ||
-|| yy || the year as two digit number (00 to 99) ||
-|| yyyy || the year as four digit number. If the year is negative, a minus sign is prepended in addition. ||
+|| *Expression* || *Output* ||
+|| d || The day as number without a leading zero (1 to 31) ||
+|| dd || The day as number with a leading zero (01 to 31) ||
+|| ddd || The abbreviated localized day name (e.g. 'Mon' to 'Sun'). ||
+|| dddd || The long localized day name (e.g. 'Monday' to 'Sunday'). ||
+|| M || The month as number without a leading zero (1 to 12) ||
+|| MM || The month as number with a leading zero (01 to 12) ||
+|| MMM || Te abbreviated localized month name (e.g. 'Jan' to 'Dec'). ||
+|| MMMM || The long localized month name (e.g. 'January' to 'December'). ||
+|| yy || The year as two digit number (00 to 99) ||
+|| yyyy || The year as four digit number. ||
+
+= Examples =
+
+Example format strings (assuming that the date is the 20 July 1969):
+|| *Format* || *Result* ||
+|| dd.MM.yyyy || 20.07.1969 ||
+|| ddd MMMM d yy || Sun July 20 69 ||
+|| 'The day is' dddd || The day is Sunday ||
