Edited wiki page DateFormat: added introduction.

--- a/wiki/DateFormat.wiki
+++ b/wiki/DateFormat.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Add your content here.
+You can edit the way favorite's field displays date in te settings. Here is an explanation how it works.
 
 
 = Table =
