--- a/wiki/DateFormat.wiki
+++ b/wiki/DateFormat.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-You can edit the way favorite's field displays date in te settings. Here is an explanation how it works.
+You can edit the way favorite's field displays date in the settings. Here is an explanation how it works.
 
 
 = Table =
