--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,4 +1,5 @@
 #summary How to use the program.
+#labels Featured
 
 
 
@@ -30,3 +31,4 @@ The second thing to do is to choose from where you want to download pictures. To
 The upper part of the window is "divided" in two. You can choose between them using their respective radio.
   * The tags & page field: to make searches using tags. You can add your own tags to auto-completion editing the "words.txt" file.
   * The date field: to search in the popular images of a single day. You can change the date format in the options.
+When you have finished, just press the "Ok" button, and the results will be displayed below the search fields.
