Edited wiki page Database through web user interface.

--- a/wiki/Database.wiki
+++ b/wiki/Database.wiki
@@ -1,5 +1,7 @@
 #summary How to use the "commands" tab to add entries in a database for each download
 
+_Sorry for the bad English on this page, this will be rectified in the next few days._
+
 =Introduction=
 
 Note that this feature is pretty limited, and if you have any suggestion for improving it, don't hesitate add an issue in the "Issue" tab.
