Edited wiki page Database through web user interface.

--- a/wiki/Database.wiki
+++ b/wiki/Database.wiki
@@ -1,4 +1,4 @@
-_Sorry for the bad English on this page, this will be rectified in the next few days._
+#summary How to use the "commands" tab to add entries in a database for each download
 
 =Introduction=
 
