--- a/wiki/Commandline.wiki
+++ b/wiki/Commandline.wiki
@@ -19,8 +19,18 @@ Using commandline, you cas automate downloads of an entire batch of tags very ea
   * --page (-s): the first page
   * --path (-p): where you want to save pictures
   * --filename (-f): the saving format (see the options window)
+  * Others paramters are considered as tags.
+For example :
+{{{
+Grabber.exe happoubi_jin --booru=danbooru.donmai.us --limit=100 --page=1 --path="C:/Users/Bionus/My Pictures" --format=%md5%.%ext
+}}}
 
 = Log-in =
 Sometimes, the server will be overloaded, and will promote the logged-in visitors. In this case, it is necessary to log-in. For this, two additional parameters are available:
   * --user (-u): the username
   * --password (-w) : the password
+For example :
+{{{
+Grabber.exe happoubi_jin --user=Bionus --password=YOUR_PASSWORD_HERE --booru=danbooru.donmai.us --limit=100 --page=1 --path="C:/Users/Bionus/My Pictures" --format=%md5%.%ext
+}}}
+Of course replace "YOUR_PASSWORD_HERE" by your real password.
