--- a/wiki/Database.wiki
+++ b/wiki/Database.wiki
@@ -12,10 +12,10 @@ First, go to the "Commands" tab of the Options window.
 Here, you have three fields: "Initialization", "Image" and "Tag".
 
 ==Initialization==
-Since we are here talking databases, we must first connect to this database. For example, for a MySQL database, the command is (on windows) "path/to/mysql/file --user=USER_NAME --password=PASSWORD DATABASE_NAME". Of course you will have to replace "USER_NAME" by your user name, "PASSWORD" by your password and DATABASE_NAME by the name of your database. Note that the username/password is often "root" with an empty password if your database is a local one.
+Since we are here talking databases, we must first connect to this database. For example, for a MySQL database, the command is (on windows) "path/to/mysql/file --user=USER_NAME --password=PASSWORD DATABASE_NAME" (if there are spaces in the path to mysql, remember to surround it by quotes). Of course you will have to replace "USER_NAME" by your user name, "PASSWORD" by your password and DATABASE_NAME by the name of your database. Note that the username/password is often "root" with an empty password if your database is a local one.
 So here you have, for example:
 {{{
-C:/Program Files/wamp/bin/mysql/mysql5.1.36/bin/mysql.exe --user=root --password= imageboard
+"C:/Program Files/wamp/bin/mysql/mysql5.1.36/bin/mysql.exe" --user=root --password= imageboard
 }}}
 And now, you have your connection ready !
 
@@ -33,4 +33,17 @@ Here, you now just have to put the query for adding a tag in the database, using
 For example :
 {{{
 INSERT INTO tags(name, type) VALUES('%tag%', '%type%');
+}}}
+
+= Gelbooru =
+==Image==
+Work in progress...
+{{{
+...
+}}}
+
+==Tag==
+You must change tag_index.tag index and set it to be unique first.
+{{{
+INSERT INTO tag_index(tag, index_count) VALUES("%tag%", 1) ON DUPLICATE KEY UPDATE index_count = index_count+1;
 }}}
