--- a/wiki/Database.wiki
+++ b/wiki/Database.wiki
@@ -23,27 +23,19 @@ And now, you have your connection ready !
 Here, you now just have to put the query for adding an image in the database, using the same tokens as for saving images.
 *Do not forget to put an ";" at the end of your query !*
 For example :
-{{{
-INSERT INTO images(id, rating, tags) VALUES(NULL, '%rating%', '%tags%');
-}}}
+<code language="sql">INSERT INTO images(id, rating, tags) VALUES(NULL, '%rating%', '%tags%');</code>
 
 ==Tag==
 Here, you now just have to put the query for adding a tag in the database, using the tokens written under the field.
 *Do not forget to put an ";" at the end of your query !*
 For example :
-{{{
-INSERT INTO tags(name, type) VALUES('%tag%', '%type%');
-}}}
+<code language="sql">INSERT INTO tags(name, type) VALUES('%tag%', '%type%');</code>
 
 = Gelbooru =
 ==Image==
 Work in progress...
-{{{
-...
-}}}
+<code language="sql">...</code>
 
 ==Tag==
 You must change tag_index.tag index and set it to be unique first.
-{{{
-INSERT INTO tag_index(tag, index_count) VALUES("%tag%", 1) ON DUPLICATE KEY UPDATE index_count = index_count+1;
-}}}
+<code language="sql">INSERT INTO tag_index(tag, index_count) VALUES('%tag%', 1) ON DUPLICATE KEY UPDATE index_count = index_count+1;</code>
