--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,5 +1,7 @@
 #summary Imgbrd-grabber's changelog from v1.0 to v1.9.3
 
+<wiki:toc max_depth="1" />
+
 = 1.9 =
 == 1.9.3 ==
   * Fixed issue 16 (e621's batch download).
