--- a/wiki/NewSite.wiki
+++ b/wiki/NewSite.wiki
@@ -20,14 +20,8 @@ If your site is not based on danbooru/gelbooru/shimmie, it gets more complicated
 <Site>
 	<Name>Danbooru</Name>
 	<Urls>
-		<Xml>
-			<Tags>/post/index.xml?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags={tags}</Tags>
-			<Popular>/post/index.xml?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags=date:{month}/{day}/{year} order:score</Popular>
-		</Xml>
-		<Json>
-			<Tags>/post/index.json?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags={tags}</Tags>
-			<Popular>/post/index.json?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags=date:{month}/{day}/{year} order:score</Popular>
-		</Json>
+		<Xml>/post/index.xml?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags={tags}</Tags></Xml>
+		<Json>/post/index.json?login={pseudo}&amp;password_hash={password}&amp;limit={limit}&amp;page={page}&amp;tags={tags}</Tags></Json>
 		<Html>
 			<Post>/post/show/{id}</Post>
 		</Html>
@@ -44,15 +38,15 @@ If your site is not based on danbooru/gelbooru/shimmie, it gets more complicated
 Let's explain it in detail.
   * Name: the name that will be shown in the sources window.
   * Urls: the pages urls. You must set at least Html/Post and either Xml or Json. They must start with a slash.
-   * Xml/Json
-    * Tags
-    * Tags
+   * Xml: url to the site's XML API. You can use {pseudo}, {password}, {limit}, {page} and {tags}.
+   * Json: same as Xml, but for JSON API.
    * Html
     * Post: url of an image details.
   * Regex: even when using xml/json, some regex must be used
-   * Tags
-   * Image
-   * LastPage
+   * Tags: regex that must return a list of tags from the Html/Post url. Must capture tag's type and tag (in this order).
+   * Image: regex that must return a list of iamges from the Html/Post url. Must capture id and preview_url, but can capture md5, tags, rating, score and user (any order, see below).
+   * Order: capture order, separated with a "|". For example "id|preview_url" means that the first captured text in the Image regex will be id, and the second one the preview image's url.
+   * LastPage: regex that must return the last page, if XML API don't give it. Must only capture page number.
   * FirstPage: the number of the firstpage, usually 1 (but, for example, gelbooru starts with 0).
 
 = Before v2.0 =
